pythonscript/cffi_bindings/cdef.gen.h

typedef bool godot_bool;
typedef int godot_int;
typedef float godot_real;
typedef void godot_object;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
typedef struct godot_vector2
{
  uint8_t _dont_touch_that[8];
} godot_vector2;
typedef struct godot_rect2
{
  uint8_t _dont_touch_that[16];
} godot_rect2;
typedef struct godot_vector3
{
  uint8_t _dont_touch_that[12];
} godot_vector3;
typedef struct godot_basis
{
  uint8_t _dont_touch_that[36];
} godot_basis;
typedef struct godot_quat
{
  uint8_t _dont_touch_that[16];
} godot_quat;
typedef struct godot_transform2d
{
  uint8_t _dont_touch_that[24];
} godot_transform2d;
void godot_transform2d_new_identity(godot_transform2d *p_t);
void godot_transform2d_new(godot_transform2d *p_t, const godot_real p_rot, const godot_vector2 *p_pos);
typedef struct godot_plane
{
  uint8_t _dont_touch_that[16];
} godot_plane;
typedef struct godot_transform
{
  uint8_t _dont_touch_that[48];
} godot_transform;
typedef struct godot_color
{
  uint8_t _dont_touch_that[16];
} godot_color;
typedef struct godot_pool_byte_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_byte_array;
typedef struct godot_pool_int_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_int_array;
typedef struct godot_pool_real_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_real_array;
typedef struct godot_pool_string_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_string_array;
typedef struct godot_pool_vector2_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector2_array;
typedef struct godot_pool_vector3_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector3_array;
typedef struct godot_pool_color_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_color_array;
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;
typedef struct godot_variant
{
  uint8_t _dont_touch_that[24];
} godot_variant;
struct godot_transform2d;
typedef struct godot_transform2d godot_transform2d;
typedef struct godot_dictionary
{
  uint8_t _dont_touch_that[8];
} godot_dictionary;
typedef struct godot_node_path
{
  uint8_t _dont_touch_that[8];
} godot_node_path;
typedef struct godot_rid
{
  uint8_t _dont_touch_that[8];
} godot_rid;
typedef enum godot_variant_type {GODOT_VARIANT_TYPE_NIL, GODOT_VARIANT_TYPE_BOOL, GODOT_VARIANT_TYPE_INT, GODOT_VARIANT_TYPE_REAL, GODOT_VARIANT_TYPE_STRING, GODOT_VARIANT_TYPE_VECTOR2, GODOT_VARIANT_TYPE_RECT2, GODOT_VARIANT_TYPE_VECTOR3, GODOT_VARIANT_TYPE_TRANSFORM2D, GODOT_VARIANT_TYPE_PLANE, GODOT_VARIANT_TYPE_QUAT, GODOT_VARIANT_TYPE_RECT3, GODOT_VARIANT_TYPE_BASIS, GODOT_VARIANT_TYPE_TRANSFORM, GODOT_VARIANT_TYPE_COLOR, GODOT_VARIANT_TYPE_IMAGE, GODOT_VARIANT_TYPE_NODE_PATH, GODOT_VARIANT_TYPE_RID, GODOT_VARIANT_TYPE_OBJECT, GODOT_VARIANT_TYPE_INPUT_EVENT, GODOT_VARIANT_TYPE_DICTIONARY, GODOT_VARIANT_TYPE_ARRAY, GODOT_VARIANT_TYPE_POOL_BYTE_ARRAY, GODOT_VARIANT_TYPE_POOL_INT_ARRAY, GODOT_VARIANT_TYPE_POOL_REAL_ARRAY, GODOT_VARIANT_TYPE_POOL_STRING_ARRAY, GODOT_VARIANT_TYPE_POOL_VECTOR2_ARRAY, GODOT_VARIANT_TYPE_POOL_VECTOR3_ARRAY, GODOT_VARIANT_TYPE_POOL_COLOR_ARRAY} godot_variant_type;
godot_variant_type godot_variant_get_type(const godot_variant *p_v);
void godot_variant_new_nil(godot_variant *p_v);
void godot_variant_new_bool(godot_variant *p_v, const godot_bool p_b);
void godot_variant_new_uint(godot_variant *p_v, const uint64_t p_i);
void godot_variant_new_int(godot_variant *p_v, const int64_t p_i);
void godot_variant_new_real(godot_variant *p_v, const double p_r);
void godot_variant_new_string(godot_variant *p_v, const godot_string *p_s);
void godot_variant_new_vector2(godot_variant *p_v, const godot_vector2 *p_v2);
void godot_variant_new_rect2(godot_variant *p_v, const godot_rect2 *p_rect2);
void godot_variant_new_vector3(godot_variant *p_v, const godot_vector3 *p_v3);
void godot_variant_new_transform2d(godot_variant *p_v, const godot_transform2d *p_t2d);
void godot_variant_new_plane(godot_variant *p_v, const godot_plane *p_plane);
void godot_variant_new_quat(godot_variant *p_v, const godot_quat *p_quat);
void godot_variant_new_basis(godot_variant *p_v, const godot_basis *p_basis);
void godot_variant_new_transform(godot_variant *p_v, const godot_transform *p_trans);
void godot_variant_new_color(godot_variant *p_v, const godot_color *p_color);
void godot_variant_new_node_path(godot_variant *p_v, const godot_node_path *p_np);
void godot_variant_new_rid(godot_variant *p_v, const godot_rid *p_rid);
void godot_variant_new_object(godot_variant *p_v, const godot_object *p_obj);
void godot_variant_new_dictionary(godot_variant *p_v, const godot_dictionary *p_dict);
void godot_variant_new_array(godot_variant *p_v, const godot_array *p_arr);
void godot_variant_new_pool_byte_array(godot_variant *p_v, const godot_pool_byte_array *p_pba);
void godot_variant_new_pool_int_array(godot_variant *p_v, const godot_pool_int_array *p_pia);
void godot_variant_new_pool_real_array(godot_variant *p_v, const godot_pool_real_array *p_pra);
void godot_variant_new_pool_string_array(godot_variant *p_v, const godot_pool_string_array *p_psa);
void godot_variant_new_pool_vector2_array(godot_variant *p_v, const godot_pool_vector2_array *p_pv2a);
void godot_variant_new_pool_vector3_array(godot_variant *p_v, const godot_pool_vector3_array *p_pv3a);
void godot_variant_new_pool_color_array(godot_variant *p_v, const godot_pool_color_array *p_pca);
godot_bool godot_variant_as_bool(const godot_variant *p_v);
uint64_t godot_variant_as_uint(const godot_variant *p_v);
int64_t godot_variant_as_int(const godot_variant *p_v);
double godot_variant_as_real(const godot_variant *p_v);
godot_string godot_variant_as_string(const godot_variant *p_v);
godot_vector2 godot_variant_as_vector2(const godot_variant *p_v);
godot_rect2 godot_variant_as_rect2(const godot_variant *p_v);
godot_vector3 godot_variant_as_vector3(const godot_variant *p_v);
godot_transform2d godot_variant_as_transform2d(const godot_variant *p_v);
godot_plane godot_variant_as_plane(const godot_variant *p_v);
godot_quat godot_variant_as_quat(const godot_variant *p_v);
godot_basis godot_variant_as_basis(const godot_variant *p_v);
godot_transform godot_variant_as_transform(const godot_variant *p_v);
godot_color godot_variant_as_color(const godot_variant *p_v);
godot_node_path godot_variant_as_node_path(const godot_variant *p_v);
godot_rid godot_variant_as_rid(const godot_variant *p_v);
godot_object *godot_variant_as_object(const godot_variant *p_v);
godot_dictionary godot_variant_as_dictionary(const godot_variant *p_v);
godot_array godot_variant_as_array(const godot_variant *p_v);
godot_pool_byte_array godot_variant_as_pool_byte_array(const godot_variant *p_v);
godot_pool_int_array godot_variant_as_pool_int_array(const godot_variant *p_v);
godot_pool_real_array godot_variant_as_pool_real_array(const godot_variant *p_v);
godot_pool_string_array godot_variant_as_pool_string_array(const godot_variant *p_v);
godot_pool_vector2_array godot_variant_as_pool_vector2_array(const godot_variant *p_v);
godot_pool_vector3_array godot_variant_as_pool_vector3_array(const godot_variant *p_v);
godot_pool_color_array godot_variant_as_pool_color_array(const godot_variant *p_v);
godot_variant godot_variant_call(godot_variant *p_v, const godot_string *p_method, const godot_variant **p_args, const godot_int p_argcount);
godot_bool godot_variant_has_method(godot_variant *p_v, const godot_string *p_method);
godot_bool godot_variant_operator_equal(const godot_variant *p_a, const godot_variant *p_b);
godot_bool godot_variant_operator_less(const godot_variant *p_a, const godot_variant *p_b);
godot_bool godot_variant_hash_compare(const godot_variant *p_a, const godot_variant *p_b);
godot_bool godot_variant_booleanize(const godot_variant *p_v, godot_bool *p_valid);
void godot_variant_destroy(godot_variant *p_v);
void godot_array_new(godot_array *p_arr);
void godot_array_new_pool_color_array(godot_array *p_arr, const godot_pool_color_array *p_pca);
void godot_array_new_pool_vector3_array(godot_array *p_arr, const godot_pool_vector3_array *p_pv3a);
void godot_array_new_pool_vector2_array(godot_array *p_arr, const godot_pool_vector2_array *p_pv2a);
void godot_array_new_pool_string_array(godot_array *p_arr, const godot_pool_string_array *p_psa);
void godot_array_new_pool_real_array(godot_array *p_arr, const godot_pool_real_array *p_pra);
void godot_array_new_pool_int_array(godot_array *p_arr, const godot_pool_int_array *p_pia);
void godot_array_new_pool_byte_array(godot_array *p_arr, const godot_pool_byte_array *p_pba);
void godot_array_set(godot_array *p_arr, const godot_int p_idx, const godot_variant *p_value);
godot_variant *godot_array_get(godot_array *p_arr, const godot_int p_idx);
void godot_array_append(godot_array *p_arr, const godot_variant *p_value);
void godot_array_clear(godot_array *p_arr);
godot_int godot_array_count(godot_array *p_arr, const godot_variant *p_value);
godot_bool godot_array_empty(const godot_array *p_arr);
void godot_array_erase(godot_array *p_arr, const godot_variant *p_value);
godot_variant godot_array_front(const godot_array *p_arr);
godot_variant godot_array_back(const godot_array *p_arr);
godot_int godot_array_find(const godot_array *p_arr, const godot_variant *p_what, const godot_int p_from);
godot_int godot_array_find_last(const godot_array *p_arr, const godot_variant *p_what);
godot_bool godot_array_has(const godot_array *p_arr, const godot_variant *p_value);
uint32_t godot_array_hash(const godot_array *p_arr);
void godot_array_insert(godot_array *p_arr, const godot_int p_pos, const godot_variant *p_value);
void godot_array_invert(godot_array *p_arr);
godot_variant godot_array_pop_back(godot_array *p_arr);
godot_variant godot_array_pop_front(godot_array *p_arr);
void godot_array_push_back(godot_array *p_arr, const godot_variant *p_value);
void godot_array_push_front(godot_array *p_arr, const godot_variant *p_value);
void godot_array_remove(godot_array *p_arr, const godot_int p_idx);
void godot_array_resize(godot_array *p_arr, const godot_int p_size);
godot_int godot_array_rfind(const godot_array *p_arr, const godot_variant *p_what, const godot_int p_from);
godot_int godot_array_size(const godot_array *p_arr);
void godot_array_sort(godot_array *p_arr);
void godot_array_sort_custom(godot_array *p_arr, godot_object *p_obj, const godot_string *p_func);
void godot_array_destroy(godot_array *p_arr);