pythonscript/gdnative.pxd


    godot_transform godot_transform_affine_inverse(godot_transform* p_self)

    godot_transform godot_transform_orthonormalized(godot_transform* p_self)

    godot_transform godot_transform_rotated(godot_transform* p_self, godot_vector3* p_axis, godot_real p_phi)

    godot_transform godot_transform_scaled(godot_transform* p_self, godot_vector3* p_scale)

    godot_transform godot_transform_translated(godot_transform* p_self, godot_vector3* p_ofs)

    godot_transform godot_transform_looking_at(godot_transform* p_self, godot_vector3* p_target, godot_vector3* p_up)

    godot_plane godot_transform_xform_plane(godot_transform* p_self, godot_plane* p_v)

    godot_plane godot_transform_xform_inv_plane(godot_transform* p_self, godot_plane* p_v)

    void godot_transform_new_identity(godot_transform* r_dest)

    godot_bool godot_transform_operator_equal(godot_transform* p_self, godot_transform* p_b)

    godot_transform godot_transform_operator_multiply(godot_transform* p_self, godot_transform* p_b)

    godot_vector3 godot_transform_xform_vector3(godot_transform* p_self, godot_vector3* p_v)

    godot_vector3 godot_transform_xform_inv_vector3(godot_transform* p_self, godot_vector3* p_v)

    godot_aabb godot_transform_xform_aabb(godot_transform* p_self, godot_aabb* p_v)

    godot_aabb godot_transform_xform_inv_aabb(godot_transform* p_self, godot_aabb* p_v)

    ctypedef struct godot_transform2d:
        uint8_t _dont_touch_that[24]

    void godot_transform2d_new(godot_transform2d* r_dest, godot_real p_rot, godot_vector2* p_pos)

    void godot_transform2d_new_axis_origin(godot_transform2d* r_dest, godot_vector2* p_x_axis, godot_vector2* p_y_axis, godot_vector2* p_origin)

    godot_string godot_transform2d_as_string(godot_transform2d* p_self)

    godot_transform2d godot_transform2d_inverse(godot_transform2d* p_self)

    godot_transform2d godot_transform2d_affine_inverse(godot_transform2d* p_self)

    godot_real godot_transform2d_get_rotation(godot_transform2d* p_self)

    godot_vector2 godot_transform2d_get_origin(godot_transform2d* p_self)

    godot_vector2 godot_transform2d_get_scale(godot_transform2d* p_self)

    godot_transform2d godot_transform2d_orthonormalized(godot_transform2d* p_self)

    godot_transform2d godot_transform2d_rotated(godot_transform2d* p_self, godot_real p_phi)

    godot_transform2d godot_transform2d_scaled(godot_transform2d* p_self, godot_vector2* p_scale)

    godot_transform2d godot_transform2d_translated(godot_transform2d* p_self, godot_vector2* p_offset)

    godot_vector2 godot_transform2d_xform_vector2(godot_transform2d* p_self, godot_vector2* p_v)

    godot_vector2 godot_transform2d_xform_inv_vector2(godot_transform2d* p_self, godot_vector2* p_v)

    godot_vector2 godot_transform2d_basis_xform_vector2(godot_transform2d* p_self, godot_vector2* p_v)

    godot_vector2 godot_transform2d_basis_xform_inv_vector2(godot_transform2d* p_self, godot_vector2* p_v)

    godot_transform2d godot_transform2d_interpolate_with(godot_transform2d* p_self, godot_transform2d* p_m, godot_real p_c)

    godot_bool godot_transform2d_operator_equal(godot_transform2d* p_self, godot_transform2d* p_b)

    godot_transform2d godot_transform2d_operator_multiply(godot_transform2d* p_self, godot_transform2d* p_b)

    void godot_transform2d_new_identity(godot_transform2d* r_dest)

    godot_rect2 godot_transform2d_xform_rect2(godot_transform2d* p_self, godot_rect2* p_v)

    godot_rect2 godot_transform2d_xform_inv_rect2(godot_transform2d* p_self, godot_rect2* p_v)

    godot_variant_type godot_variant_get_type(godot_variant* p_v)

    void godot_variant_new_copy(godot_variant* r_dest, godot_variant* p_src)

    void godot_variant_new_nil(godot_variant* r_dest)

    void godot_variant_new_bool(godot_variant* r_dest, godot_bool p_b)

    void godot_variant_new_uint(godot_variant* r_dest, uint64_t p_i)

    void godot_variant_new_int(godot_variant* r_dest, int64_t p_i)

    void godot_variant_new_real(godot_variant* r_dest, double p_r)

    void godot_variant_new_string(godot_variant* r_dest, godot_string* p_s)

    void godot_variant_new_vector2(godot_variant* r_dest, godot_vector2* p_v2)

    void godot_variant_new_rect2(godot_variant* r_dest, godot_rect2* p_rect2)

    void godot_variant_new_vector3(godot_variant* r_dest, godot_vector3* p_v3)

    void godot_variant_new_transform2d(godot_variant* r_dest, godot_transform2d* p_t2d)

    void godot_variant_new_plane(godot_variant* r_dest, godot_plane* p_plane)

    void godot_variant_new_quat(godot_variant* r_dest, godot_quat* p_quat)

    void godot_variant_new_aabb(godot_variant* r_dest, godot_aabb* p_aabb)

    void godot_variant_new_basis(godot_variant* r_dest, godot_basis* p_basis)

    void godot_variant_new_transform(godot_variant* r_dest, godot_transform* p_trans)

    void godot_variant_new_color(godot_variant* r_dest, godot_color* p_color)

    void godot_variant_new_node_path(godot_variant* r_dest, godot_node_path* p_np)

    void godot_variant_new_rid(godot_variant* r_dest, godot_rid* p_rid)

    void godot_variant_new_object(godot_variant* r_dest, godot_object* p_obj)

    void godot_variant_new_dictionary(godot_variant* r_dest, godot_dictionary* p_dict)

    void godot_variant_new_array(godot_variant* r_dest, godot_array* p_arr)

    void godot_variant_new_pool_byte_array(godot_variant* r_dest, godot_pool_byte_array* p_pba)

    void godot_variant_new_pool_int_array(godot_variant* r_dest, godot_pool_int_array* p_pia)

    void godot_variant_new_pool_real_array(godot_variant* r_dest, godot_pool_real_array* p_pra)

    void godot_variant_new_pool_string_array(godot_variant* r_dest, godot_pool_string_array* p_psa)

    void godot_variant_new_pool_vector2_array(godot_variant* r_dest, godot_pool_vector2_array* p_pv2a)

    void godot_variant_new_pool_vector3_array(godot_variant* r_dest, godot_pool_vector3_array* p_pv3a)

    void godot_variant_new_pool_color_array(godot_variant* r_dest, godot_pool_color_array* p_pca)

    godot_bool godot_variant_as_bool(godot_variant* p_self)

    uint64_t godot_variant_as_uint(godot_variant* p_self)

    int64_t godot_variant_as_int(godot_variant* p_self)

    double godot_variant_as_real(godot_variant* p_self)

    godot_string godot_variant_as_string(godot_variant* p_self)

    godot_vector2 godot_variant_as_vector2(godot_variant* p_self)

    godot_rect2 godot_variant_as_rect2(godot_variant* p_self)

    godot_vector3 godot_variant_as_vector3(godot_variant* p_self)

    godot_transform2d godot_variant_as_transform2d(godot_variant* p_self)

    godot_plane godot_variant_as_plane(godot_variant* p_self)

    godot_quat godot_variant_as_quat(godot_variant* p_self)

    godot_aabb godot_variant_as_aabb(godot_variant* p_self)

    godot_basis godot_variant_as_basis(godot_variant* p_self)

    godot_transform godot_variant_as_transform(godot_variant* p_self)

    godot_color godot_variant_as_color(godot_variant* p_self)

    godot_node_path godot_variant_as_node_path(godot_variant* p_self)

    godot_rid godot_variant_as_rid(godot_variant* p_self)

    godot_object* godot_variant_as_object(godot_variant* p_self)

    godot_dictionary godot_variant_as_dictionary(godot_variant* p_self)

    godot_array godot_variant_as_array(godot_variant* p_self)

    godot_pool_byte_array godot_variant_as_pool_byte_array(godot_variant* p_self)

    godot_pool_int_array godot_variant_as_pool_int_array(godot_variant* p_self)

    godot_pool_real_array godot_variant_as_pool_real_array(godot_variant* p_self)

    godot_pool_string_array godot_variant_as_pool_string_array(godot_variant* p_self)

    godot_pool_vector2_array godot_variant_as_pool_vector2_array(godot_variant* p_self)

    godot_pool_vector3_array godot_variant_as_pool_vector3_array(godot_variant* p_self)

    godot_pool_color_array godot_variant_as_pool_color_array(godot_variant* p_self)

    godot_variant godot_variant_call(godot_variant* p_self, godot_string* p_method, godot_variant** p_args, godot_int p_argcount, godot_variant_call_error* r_error)

    godot_bool godot_variant_has_method(godot_variant* p_self, godot_string* p_method)

    godot_bool godot_variant_operator_equal(godot_variant* p_self, godot_variant* p_other)

    godot_bool godot_variant_operator_less(godot_variant* p_self, godot_variant* p_other)

    godot_bool godot_variant_hash_compare(godot_variant* p_self, godot_variant* p_other)

    godot_bool godot_variant_booleanize(godot_variant* p_self)

    void godot_variant_destroy(godot_variant* p_self)

    godot_string godot_variant_get_operator_name(godot_variant_operator p_op)

    void godot_variant_evaluate(godot_variant_operator p_op, godot_variant* p_a, godot_variant* p_b, godot_variant* r_ret, godot_bool* r_valid)

    void godot_array_new(godot_array* r_dest)

    void godot_array_new_copy(godot_array* r_dest, godot_array* p_src)

    void godot_array_new_pool_color_array(godot_array* r_dest, godot_pool_color_array* p_pca)

    void godot_array_new_pool_vector3_array(godot_array* r_dest, godot_pool_vector3_array* p_pv3a)

    void godot_array_new_pool_vector2_array(godot_array* r_dest, godot_pool_vector2_array* p_pv2a)

    void godot_array_new_pool_string_array(godot_array* r_dest, godot_pool_string_array* p_psa)

    void godot_array_new_pool_real_array(godot_array* r_dest, godot_pool_real_array* p_pra)

    void godot_array_new_pool_int_array(godot_array* r_dest, godot_pool_int_array* p_pia)

    void godot_array_new_pool_byte_array(godot_array* r_dest, godot_pool_byte_array* p_pba)

    void godot_array_set(godot_array* p_self, godot_int p_idx, godot_variant* p_value)

    godot_variant godot_array_get(godot_array* p_self, godot_int p_idx)

    godot_variant* godot_array_operator_index(godot_array* p_self, godot_int p_idx)

    godot_variant* godot_array_operator_index_const(godot_array* p_self, godot_int p_idx)

    void godot_array_append(godot_array* p_self, godot_variant* p_value)

    void godot_array_clear(godot_array* p_self)

    godot_int godot_array_count(godot_array* p_self, godot_variant* p_value)

    godot_bool godot_array_empty(godot_array* p_self)

    void godot_array_erase(godot_array* p_self, godot_variant* p_value)

    godot_variant godot_array_front(godot_array* p_self)

    godot_variant godot_array_back(godot_array* p_self)

    godot_int godot_array_find(godot_array* p_self, godot_variant* p_what, godot_int p_from)

    godot_int godot_array_find_last(godot_array* p_self, godot_variant* p_what)

    godot_bool godot_array_has(godot_array* p_self, godot_variant* p_value)

    godot_int godot_array_hash(godot_array* p_self)

    void godot_array_insert(godot_array* p_self, godot_int p_pos, godot_variant* p_value)

    void godot_array_invert(godot_array* p_self)

    godot_variant godot_array_pop_back(godot_array* p_self)

    godot_variant godot_array_pop_front(godot_array* p_self)

    void godot_array_push_back(godot_array* p_self, godot_variant* p_value)

    void godot_array_push_front(godot_array* p_self, godot_variant* p_value)

    void godot_array_remove(godot_array* p_self, godot_int p_idx)

    void godot_array_resize(godot_array* p_self, godot_int p_size)

    godot_int godot_array_rfind(godot_array* p_self, godot_variant* p_what, godot_int p_from)

    godot_int godot_array_size(godot_array* p_self)

    void godot_array_sort(godot_array* p_self)

    void godot_array_sort_custom(godot_array* p_self, godot_object* p_obj, godot_string* p_func)

    godot_int godot_array_bsearch(godot_array* p_self, godot_variant* p_value, godot_bool p_before)

    godot_int godot_array_bsearch_custom(godot_array* p_self, godot_variant* p_value, godot_object* p_obj, godot_string* p_func, godot_bool p_before)

    void godot_array_destroy(godot_array* p_self)

    godot_array godot_array_duplicate(godot_array* p_self, godot_bool p_deep)

    godot_variant godot_array_max(godot_array* p_self)

    godot_variant godot_array_min(godot_array* p_self)
